# pysol

./: .gitignore  README.md  pyproject.toml
example/: addr.py  balance.py  program.py  transfer.py  wif.py
pxsol/: __init__.py  config.py  core.py  eddsa.py  log.py  rpc.py  wallet.py
res/: hello_solana_program.md  hello_solana_program.so.2
sol/: __init__.py  config.py  core.py  denomination.py  ed25519.py  eddsa.py  rpc.py  wallet.py
test/: test_core.py  test_ed25519.py  test_eddsa.py  test_example.py  test_rpc.py  test_wallet.py
