[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["sol"]

[project]
name = "pysol"
version = "0.2.0"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "Python SDK for SOL"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["requests"]

[project.urls]
homepage = "https://github.com/mohanson/pysol"

[tool.hatch.build.targets.wheel]
packages = ["sol"]
