[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pxsol"
version = "0.2.0"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "Pxsol: solana library for humans"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["requests"]

[project.urls]
homepage = "https://github.com/mohanson/pxsol"
